main_app/static/styles/main.css
body {
    background-color: #121212;
    color: #ffffff;
    min-height: 100vh;
  }
  
  h1,
  h2,
  h3 {
    color: #ffffff;
  }
  
  .container {
    padding: 40px;
    padding-right: 0;
  }
  
  .title {
    color: #ffffff;
  }
  
  .gallery {
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
    justify-content: center;
    gap: 30px;
  }
  
  .gallery .card {
    transition: 0.1s linear;
  }
  
  .gallery .card:hover {
    transform: scale(1.1);
    z-index: 10;
  }
  
  p {
    font-size: 20px;
  }
  
  .detail__img {
    position: absolute;
    left: 0;
    top: 0;
    width: 100%;
    height: 500px;
     background-color: #ffffff; 
     border-radius: 10px;
    overflow: hidden;
  } 
  
   .detail__img::after {
    content: "";
    background-image: linear-gradient(transparent 60%, #1f1f1f);
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    z-index: 5;
  }
  
  img {
    width: 100%;
    height: 500px;
    object-fit: cover;
    object-position: top;
  }

  .detail__container {
    margin-top: 500px;
  }
  .detail__work {
    width: 100%;
    display: flex;
    flex-direction: column;
}

.work {
    width: 100%;
    padding: 10px;
    display: grid;
    grid-template-columns: 0.1fr 3fr 1fr;
    border-radius: 5px;
}

.work:hover {
    background-color: hsla(0, 0%, 100%, 0.1);
    cursor: pointer; 
 } 
/* /HOME PAGE CSSSSSS/ */

@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Serif&family=Nunito+Sans:wght@400;600&display=swap');
body{
  background-color: rgb(40, 37, 37);
}


.va {
  display: flex;
  align-items: center;
}

html {
  font-family: 'Nunito Sans', sans-serif;
  color: white;
}

a {
  color: #3b7adf;
}

a:hover {
  text-decoration: underline;
  color: #3b7adf;
}

hr {
  background: #24272c;
}

.hero {
  display: flex;
  align-items: center;
  justify-content: center;
  position: relative;
  background: url(https://i.imgur.com/KxuNnNX.png)no-repeat;
  background-size:auto;
  background-position: center;
  
}

/* .title,
.subtitle {
  color: rgb(255, 254, 254);
} */

.sub{
  font-size: 30px;
  color: white;
}


.blog-posts {
  min-height: 100vh;
  background: #ffffff;
  padding-top: 4rem;
  padding-bottom: 10rem;
}

.blog-posts article {
  padding: 1.5rem;
}

.blog-posts .post img {
  border-radius: 6px;
}

.blog-posts .post .post-category {
  color: #ffffff;
}

.blog-posts .post .post-title {
  font-size: 2.2rem;
}

.blog-posts .post .post-excerpt {
  line-height: 1.5rem;
  letter-spacing: .03rem;
  font-size: 1.2rem;
  font-family: 'IBM Plex Serif', serif;
  color: #151515;
}

.blog-posts .post .featured .featured-image img {
  height: 380px;
}

/* ABOUT PAGE CSSSSSSSS */

html,body {
    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
    font-size: 14px;
    background: #f5fbff;
  }
  .navbar.is-white {
    background: #F0F2F4;
  }
  .navbar-brand .brand-text {
    font-size: 1.11rem;
    font-weight: bold;
  }
  .hero-body
  {background-image: url(https://wp-tid.zillowstatic.com/bedrock/app/uploads/sites/26/greek-revival-greenwich-village-7a2416.jpg);
  background-position: center;
  background-size: cover;
  background-repeat: no-repeat;
  height: 500px;
  background-color: rgb(35, 27, 27);
  }
  .articles {
    margin: 5rem 0;
    margin-top: -200px;
  }
  .articles .content p {
      line-height: 1.9;
      margin: 15px 0;
  }
  .author-image {
      position: absolute;
      top: -30px;
      left: 50%;
      width: 60px;
      height: 60px;
      margin-left: -30px;
      border: 3px solid #ccc;
      border-radius: 50%;
  }
  .media-center {
    display: block;
    margin-bottom: 1rem;
  }
  .media-content {
    margin-top: 3rem;
  }
  .article, .promo-block {
    margin-top: 6rem;
  }
  div.column.is-8:first-child {
    padding-top: 0;
    margin-top: 0;
  }
  .article-title {
    font-size: 2rem;
    font-weight: lighter;
    line-height: 2;
  }
  .article-subtitle {
    color: #909AA0;
    margin-bottom: 3rem;
  }
  .article-body {
    line-height: 1.4;
    margin: 0 6rem;
  }
  .promo-block .container {
    margin: 1rem 5rem;
  }

  .navbar-brand {
    position: relative;
    background: url(https://i.imgur.com/BYALeHa.png);
    width: 112px;
    height: 10px;
    background-size: cover;
    background-repeat: no-repeat;
    background-position: center;
}

/* DETAILS CSSSSSSSS */
.detailpic {
    display: block;
    margin-left: auto;
    margin-right: auto;
    width: 100%;
    height: 500px;
    object-fit:none
  
}

